# yaml-language-server: $schema=https://json.schemastore.org/any.json
appId: com.atomux.app.preview
---
# yaml-language-server: $schema=https://json.schemastore.org/any.json
- launchApp:
    appId: 'com.atomux.app.preview'
    clearState: true
    clearKeychain: true
# TODO - replace with MAESTRO_TESTS_DIR once it's landed on EAS
- evalScript: ${output.maestroTestsDir = MAESTRO_RESULT_PATH || '.'}
# Note: conditional subFlow does not work in EAS
# - runFlow:
#     when:
#       notVisible: 'Sign In'
#     file: auth/signout.yaml
- startRecording: ${output.maestroTestsDir}/recording
- tapOn: 'Sign In'
- assertVisible: 'Your token: auto-sign-token'
- tapOn: 'Sign Out'
- takeScreenshot: ${output.maestroTestsDir}/SignInScreen
- tapOn: 'Sign In with Browser'
- runFlow:
    when:
      visible: 'Continue'
      platform: iOS
    commands:
      - tapOn: 'Continue'
- tapOn: 'my-token-123'
- inputText: 456
- tapOn: Atom Signin
- tapOn: Sign In
- tapOn: Envelope Tab
- takeScreenshot: ${output.maestroTestsDir}/EnvelopeScreen
- tapOn: Envelope Home with Cookie Share
- assertVisible: session=my-token-123456
- tapOn: Onboard
- tapOn: About
- tapOn: Envelope Tab
- runFlow: auth/signout.yaml
- stopRecording
